<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">


            <TextView
                android:id="@+id/description_textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/getting_started"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/getting_started_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/getting_started_desc"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/description_textview"
                app:layout_constraintStart_toStartOf="@+id/description_textview"
                app:layout_constraintTop_toBottomOf="@+id/description_textview" />

            <TextView
                android:id="@+id/how_to"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/using_the_app"
                android:textColor="@color/colorPrimary"
                android:textSize="23sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/getting_started_description"
                app:layout_constraintStart_toStartOf="@+id/getting_started_description"
                app:layout_constraintTop_toBottomOf="@+id/getting_started_description" />

            <TextView
                android:id="@+id/using_the_app_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/to_get_started"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/description_textview"
                app:layout_constraintStart_toStartOf="@+id/description_textview"
                app:layout_constraintTop_toBottomOf="@+id/how_to" />


            <ImageView
                android:id="@+id/img_step_one"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/step_one_image_desc"
                android:src="@drawable/stage_one"
                app:layout_constraintEnd_toEndOf="@+id/using_the_app_desc"
                app:layout_constraintStart_toStartOf="@+id/using_the_app_desc"
                app:layout_constraintTop_toBottomOf="@+id/using_the_app_desc" />

            <TextView
                android:id="@+id/step_one_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/step_one"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/img_step_one"
                app:layout_constraintStart_toStartOf="@+id/img_step_one"
                app:layout_constraintTop_toBottomOf="@+id/img_step_one" />


            <ImageView
                android:id="@+id/img_step_two"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/step_two_image_desc"
                android:src="@drawable/stage_two"
                app:layout_constraintEnd_toEndOf="@+id/step_one_text"
                app:layout_constraintStart_toStartOf="@+id/step_one_text"
                app:layout_constraintTop_toBottomOf="@+id/step_one_text" />

            <TextView
                android:id="@+id/step_one_text_contd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/after_entering"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/img_step_two"
                app:layout_constraintStart_toStartOf="@+id/img_step_two"
                app:layout_constraintTop_toBottomOf="@+id/img_step_two" />

            <ImageView
                android:id="@+id/img_step_three"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/step_three_image_desc"
                android:src="@drawable/step_three"
                app:layout_constraintEnd_toEndOf="@+id/step_one_text_contd"
                app:layout_constraintStart_toStartOf="@+id/step_one_text_contd"
                app:layout_constraintTop_toBottomOf="@+id/step_one_text_contd" />

            <TextView
                android:id="@+id/step_two_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/step_two"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/img_step_three"
                app:layout_constraintStart_toStartOf="@+id/img_step_three"
                app:layout_constraintTop_toBottomOf="@+id/img_step_three" />

            <ImageView
                android:id="@+id/img_step_four"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/step_four_image_desc"
                android:src="@drawable/step_four"
                app:layout_constraintEnd_toEndOf="@+id/step_two_text"
                app:layout_constraintStart_toStartOf="@+id/step_two_text"
                app:layout_constraintTop_toBottomOf="@+id/step_two_text" />

            <TextView
                android:id="@+id/step_two_text_contd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/step_two_contd"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/img_step_four"
                app:layout_constraintStart_toStartOf="@+id/img_step_four"
                app:layout_constraintTop_toBottomOf="@+id/img_step_four" />

            <ImageView
                android:id="@+id/img_step_five"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/step_five_image_desc"
                android:src="@drawable/step_five"
                app:layout_constraintEnd_toEndOf="@+id/step_two_text_contd"
                app:layout_constraintStart_toStartOf="@+id/step_two_text_contd"
                app:layout_constraintTop_toBottomOf="@+id/step_two_text_contd" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>