<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffd500">


    <EditText
        android:id="@+id/edit_quantity"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_field_decoration"
        android:ems="10"
        android:hint="@string/_0"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/quantity_txt"
        app:layout_constraintStart_toStartOf="@+id/quantity_txt"
        app:layout_constraintTop_toBottomOf="@+id/quantity_txt" />

    <EditText
        android:id="@+id/edit_watts"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_field_decoration"
        android:ems="10"
        android:hint="@string/_0"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/watts_txt"
        app:layout_constraintStart_toStartOf="@+id/watts_txt"
        app:layout_constraintTop_toBottomOf="@+id/watts_txt" />

    <EditText
        android:id="@+id/edit_hrs"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_field_decoration"
        android:ems="10"
        android:hint="@string/_0"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/hrs_txt"
        app:layout_constraintStart_toStartOf="@+id/hrs_txt"
        app:layout_constraintTop_toBottomOf="@+id/hrs_txt" />

    <EditText
        android:id="@+id/edit_text_appliance_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/input_field_decoration"
        android:ems="10"
        android:hint="@string/input_appliance_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/quantity_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/quantity_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/quantity"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/edit_text_appliance_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_appliance_name" />

    <TextView
        android:id="@+id/hrs_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/hrs_day"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_appliance_name"
        app:layout_constraintStart_toEndOf="@+id/watts_txt"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_appliance_name" />

    <TextView
        android:id="@+id/watts_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:text="@string/watts"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/hrs_txt"
        app:layout_constraintStart_toEndOf="@+id/quantity_txt"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_appliance_name" />

</androidx.constraintlayout.widget.ConstraintLayout>